fix: changed disabled button styles to fix dark mode

--- a/src/Button/Button.module.scss
+++ b/src/Button/Button.module.scss
@@ -161,19 +161,6 @@ $button-dark-variant-map: (
       color: $button-disabled-color;
       cursor: default;
     }
-    &:focus {
-      background-color: $focus;
-      color: $color;
-      @if ($name == "tertiary") {
-        border-color: $hover;
-        color: $hover;
-      } @else if ($name == "icon-only") {
-        border-color: $hover;
-        color: $hover;
-      } @else {
-        border-color: $button-focus-color;
-      }
-    }
   }
 }
 
