--- a/src/assets/scss/variables/_theme.scss
+++ b/src/assets/scss/variables/_theme.scss
@@ -48,8 +48,8 @@ $button-gap: $spacing100;
 $button-font-size: $fontSize300;
 $button-line-height: $lineHeight100;
 
-$button-disabled-bg-color: $neutral400;
-$button-disabled-color: $neutral700;
+$button-disabled-bg-color: $neutral600;
+$button-disabled-color: $neutral500;
 $button-focus-color: $primary600;
 
 // Button Primary
